--- a/final-framework-testng/test-output/index.html
+++ b/final-framework-testng/test-output/index.html
@@ -29,15 +29,15 @@
     <div class="navigator-root">
       <div class="navigator-suite-header">
         <span>All suites</span>
-        <a href="#" class="collapse-all-link" title="Collapse/expand all the suites">
-          <img class="collapse-all-icon" src="collapseall.gif">
+        <a href="#" title="Collapse/expand all the suites" class="collapse-all-link">
+          <img src="collapseall.gif" class="collapse-all-icon">
           </img> <!-- collapse-all-icon -->
         </a> <!-- collapse-all-link -->
       </div> <!-- navigator-suite-header -->
       <div class="suite">
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
-            <a href="#" class="navigator-link" panel-name="suite-Default_suite">
+            <a href="#" panel-name="suite-Default_suite" class="navigator-link">
               <span class="suite-name border-passed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
@@ -48,37 +48,37 @@
             <div class="suite-section-content">
               <ul>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Naveen\AppData\Local\Temp\testng-eclipse--241157167\testng-customsuite.xml</span>
+                  <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
+                    <span>C:\Users\RADHADEVULAPALLY\AppData\Local\Temp\testng-eclipse-389984477\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="testlist-Default_suite">
+                  <a href="#" panel-name="testlist-Default_suite" class="navigator-link ">
                     <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="group-Default_suite">
+                  <a href="#" panel-name="group-Default_suite" class="navigator-link ">
                     <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="times-Default_suite">
+                  <a href="#" panel-name="times-Default_suite" class="navigator-link ">
                     <span>Times</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="reporter-Default_suite">
+                  <a href="#" panel-name="reporter-Default_suite" class="navigator-link ">
                     <span>Reporter output</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="ignored-methods-Default_suite">
+                  <a href="#" panel-name="ignored-methods-Default_suite" class="navigator-link ">
                     <span>Ignored methods</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="chronological-Default_suite">
+                  <a href="#" panel-name="chronological-Default_suite" class="navigator-link ">
                     <span>Chronological view</span>
                   </a> <!-- navigator-link  -->
                 </li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">5 methods,   5 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,18 +101,28 @@
                     </span>
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.regression.tests.LoginExcelTest" hash-for-method="loginDBTest(naveen, testing@123)">loginDBTest(naveen, testing@123)</a> <!-- method navigator-link -->
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.training.sanity.tests.DeleteRegionTest" class="method navigator-link" hash-for-method="clickPropBtn">clickPropBtn</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.regression.tests.LoginExcelTest" hash-for-method="loginDBTest(delete, delete)">loginDBTest(delete, delete)</a> <!-- method navigator-link -->
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.training.sanity.tests.DeleteRegionTest" class="method navigator-link" hash-for-method="clickRegionsBtn">clickRegionsBtn</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.regression.tests.LoginExcelTest" hash-for-method="loginDBTest(hello, admin@123)">loginDBTest(hello, admin@123)</a> <!-- method navigator-link -->
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.training.sanity.tests.DeleteRegionTest" class="method navigator-link" hash-for-method="deleteRegion">deleteRegion</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.training.sanity.tests.DeleteRegionTest" class="method navigator-link" hash-for-method="searchSelectRegion">searchSelectRegion</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.training.sanity.tests.DeleteRegionTest" class="method navigator-link" hash-for-method="validLoginTest">validLoginTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -130,31 +140,42 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.training.regression.tests.LoginExcelTest</span>
+              <span class="class-name">com.training.sanity.tests.DeleteRegionTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="loginDBTest(naveen, testing@123)">
-                  </a> <!-- loginDBTest(naveen, testing@123) -->
-                  <span class="method-name">loginDBTest</span>
-                  <span class="parameters">(naveen, testing@123)</span>
+                  <a name="clickPropBtn">
+                  </a> <!-- clickPropBtn -->
+                  <span class="method-name">clickPropBtn</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="loginDBTest(delete, delete)">
-                  </a> <!-- loginDBTest(delete, delete) -->
-                  <span class="method-name">loginDBTest</span>
-                  <span class="parameters">(delete, delete)</span>
+                  <a name="clickRegionsBtn">
+                  </a> <!-- clickRegionsBtn -->
+                  <span class="method-name">clickRegionsBtn</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="loginDBTest(hello, admin@123)">
-                  </a> <!-- loginDBTest(hello, admin@123) -->
-                  <span class="method-name">loginDBTest</span>
-                  <span class="parameters">(hello, admin@123)</span>
+                  <a name="deleteRegion">
+                  </a> <!-- deleteRegion -->
+                  <span class="method-name">deleteRegion</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="searchSelectRegion">
+                  </a> <!-- searchSelectRegion -->
+                  <span class="method-name">searchSelectRegion</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="validLoginTest">
+                  </a> <!-- validLoginTest -->
+                  <span class="method-name">validLoginTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -162,16 +183,16 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Naveen\AppData\Local\Temp\testng-eclipse--241157167\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\RADHADEVULAPALLY\AppData\Local\Temp\testng-eclipse-389984477\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
-&lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
-  &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
+&lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
+&lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.training.regression.tests.LoginExcelTest&quot;/&gt;
+      &lt;class name=&quot;com.training.sanity.tests.DeleteRegionTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -211,24 +232,32 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(5);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'loginDBTest')
-data.setCell(0, 2, 'com.training.regression.tests.LoginExcelTest')
-data.setCell(0, 3, 3104);
+data.setCell(0, 1, 'clickPropBtn')
+data.setCell(0, 2, 'com.training.sanity.tests.DeleteRegionTest')
+data.setCell(0, 3, 10538);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'loginDBTest')
-data.setCell(1, 2, 'com.training.regression.tests.LoginExcelTest')
-data.setCell(1, 3, 2700);
+data.setCell(1, 1, 'clickRegionsBtn')
+data.setCell(1, 2, 'com.training.sanity.tests.DeleteRegionTest')
+data.setCell(1, 3, 8906);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'loginDBTest')
-data.setCell(2, 2, 'com.training.regression.tests.LoginExcelTest')
-data.setCell(2, 3, 2595);
+data.setCell(2, 1, 'validLoginTest')
+data.setCell(2, 2, 'com.training.sanity.tests.DeleteRegionTest')
+data.setCell(2, 3, 5441);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'deleteRegion')
+data.setCell(3, 2, 'com.training.sanity.tests.DeleteRegionTest')
+data.setCell(3, 3, 4676);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'searchSelectRegion')
+data.setCell(4, 2, 'com.training.sanity.tests.DeleteRegionTest')
+data.setCell(4, 3, 3110);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 8 seconds</span>
+              <span class="suite-total-time">Total running time: 32 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -254,46 +283,50 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.training.regression.tests.LoginExcelTest</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
+              <div class="chronological-class-name">com.training.sanity.tests.DeleteRegionTest</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
                 <span class="method-name">setUpBeforeClass</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-class before -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">603 ms</span>
-              </div> <!-- configuration-method before -->
+              </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">loginDBTest(hello, admin@123)</span>
-                <span class="method-start">6399 ms</span>
+                <span class="method-name">validLoginTest</span>
+                <span class="method-start">41283 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">9101 ms</span>
+                <span class="method-start">46726 ms</span>
               </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">9890 ms</span>
-              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">loginDBTest(naveen, testing@123)</span>
-                <span class="method-start">14775 ms</span>
+                <span class="method-name">clickPropBtn</span>
+                <span class="method-start">48071 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">17880 ms</span>
+                <span class="method-start">58611 ms</span>
               </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">18647 ms</span>
-              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">loginDBTest(delete, delete)</span>
-                <span class="method-start">23953 ms</span>
+                <span class="method-name">clickRegionsBtn</span>
+                <span class="method-start">59772 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">26549 ms</span>
+                <span class="method-start">68679 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="test-method">
+                <span class="method-name">searchSelectRegion</span>
+                <span class="method-start">69797 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">72909 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="test-method">
+                <span class="method-name">deleteRegion</span>
+                <span class="method-start">74034 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">78712 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
