--- a/final-framework-testng/test-output/old/Default suite/methods-alphabetical.html
+++ b/final-framework-testng/test-output/old/Default suite/methods-alphabetical.html
@@ -1,24 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f67b76">  <td>18/12/18 23:46:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginExcelTest.loginDBTest(java.lang.String, java.lang.String)[pri:0, instance:com.training.regression.tests.LoginExcelTest@8bd1b6a]">loginDBTest</td> 
-  <td>main@655381473</td>   <td></td> </tr>
-<tr bgcolor="f67b76">  <td>18/12/18 23:46:41</td>   <td>8375</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginExcelTest.loginDBTest(java.lang.String, java.lang.String)[pri:0, instance:com.training.regression.tests.LoginExcelTest@8bd1b6a]">loginDBTest</td> 
-  <td>main@655381473</td>   <td></td> </tr>
-<tr bgcolor="f67b76">  <td>18/12/18 23:46:50</td>   <td>17553</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginExcelTest.loginDBTest(java.lang.String, java.lang.String)[pri:0, instance:com.training.regression.tests.LoginExcelTest@8bd1b6a]">loginDBTest</td> 
-  <td>main@655381473</td>   <td></td> </tr>
-<tr bgcolor="f67b76">  <td>18/12/18 23:46:27</td>   <td>-5797</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginExcelTest.setUp()[pri:0, instance:com.training.regression.tests.LoginExcelTest@8bd1b6a]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@655381473</td>   <td></td> </tr>
-<tr bgcolor="f67b76">  <td>18/12/18 23:46:36</td>   <td>3490</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginExcelTest.setUp()[pri:0, instance:com.training.regression.tests.LoginExcelTest@8bd1b6a]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@655381473</td>   <td></td> </tr>
-<tr bgcolor="f67b76">  <td>18/12/18 23:46:45</td>   <td>12248</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginExcelTest.setUp()[pri:0, instance:com.training.regression.tests.LoginExcelTest@8bd1b6a]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@655381473</td>   <td></td> </tr>
-<tr bgcolor="f67b76">  <td>18/12/18 23:46:26</td>   <td>-6395</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginExcelTest.setUpBeforeClass()[pri:0, instance:com.training.regression.tests.LoginExcelTest@8bd1b6a]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@655381473</td>   <td></td> </tr>
-<tr bgcolor="f67b76">  <td>18/12/18 23:46:35</td>   <td>2701</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginExcelTest.tearDown()[pri:0, instance:com.training.regression.tests.LoginExcelTest@8bd1b6a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@655381473</td>   <td></td> </tr>
-<tr bgcolor="f67b76">  <td>18/12/18 23:46:44</td>   <td>11480</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginExcelTest.tearDown()[pri:0, instance:com.training.regression.tests.LoginExcelTest@8bd1b6a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@655381473</td>   <td></td> </tr>
-<tr bgcolor="f67b76">  <td>18/12/18 23:46:53</td>   <td>20150</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginExcelTest.tearDown()[pri:0, instance:com.training.regression.tests.LoginExcelTest@8bd1b6a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@655381473</td>   <td></td> </tr>
+<tr bgcolor="88d3aa">  <td>20/02/18 16:44:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeleteRegionTest.clickPropBtn()[pri:1, instance:com.training.sanity.tests.DeleteRegionTest@15b204a1]">clickPropBtn</td> 
+  <td>main@2025221430</td>   <td></td> </tr>
+<tr bgcolor="88d3aa">  <td>20/02/18 16:45:06</td>   <td>11701</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeleteRegionTest.clickRegionsBtn()[pri:2, instance:com.training.sanity.tests.DeleteRegionTest@15b204a1]">clickRegionsBtn</td> 
+  <td>main@2025221430</td>   <td></td> </tr>
+<tr bgcolor="88d3aa">  <td>20/02/18 16:45:20</td>   <td>25963</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeleteRegionTest.deleteRegion()[pri:4, instance:com.training.sanity.tests.DeleteRegionTest@15b204a1]">deleteRegion</td> 
+  <td>main@2025221430</td>   <td></td> </tr>
+<tr bgcolor="88d3aa">  <td>20/02/18 16:45:16</td>   <td>21726</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeleteRegionTest.searchSelectRegion()[pri:3, instance:com.training.sanity.tests.DeleteRegionTest@15b204a1]">searchSelectRegion</td> 
+  <td>main@2025221430</td>   <td></td> </tr>
+<tr bgcolor="88d3aa">  <td>20/02/18 16:44:06</td>   <td>-48065</td> <td>&nbsp;</td><td title="&gt;&gt;DeleteRegionTest.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.DeleteRegionTest@15b204a1]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2025221430</td>   <td></td> </tr>
+<tr bgcolor="88d3aa">  <td>20/02/18 16:44:53</td>   <td>-1345</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DeleteRegionTest.tearDown()[pri:0, instance:com.training.sanity.tests.DeleteRegionTest@15b204a1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@2025221430</td>   <td></td> </tr>
+<tr bgcolor="88d3aa">  <td>20/02/18 16:45:05</td>   <td>10540</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DeleteRegionTest.tearDown()[pri:0, instance:com.training.sanity.tests.DeleteRegionTest@15b204a1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@2025221430</td>   <td></td> </tr>
+<tr bgcolor="88d3aa">  <td>20/02/18 16:45:15</td>   <td>20609</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DeleteRegionTest.tearDown()[pri:0, instance:com.training.sanity.tests.DeleteRegionTest@15b204a1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@2025221430</td>   <td></td> </tr>
+<tr bgcolor="88d3aa">  <td>20/02/18 16:45:19</td>   <td>24838</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DeleteRegionTest.tearDown()[pri:0, instance:com.training.sanity.tests.DeleteRegionTest@15b204a1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@2025221430</td>   <td></td> </tr>
+<tr bgcolor="88d3aa">  <td>20/02/18 16:45:25</td>   <td>30641</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DeleteRegionTest.tearDown()[pri:0, instance:com.training.sanity.tests.DeleteRegionTest@15b204a1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@2025221430</td>   <td></td> </tr>
+<tr bgcolor="88d3aa">  <td>20/02/18 16:44:47</td>   <td>-6788</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeleteRegionTest.validLoginTest()[pri:0, instance:com.training.sanity.tests.DeleteRegionTest@15b204a1]">validLoginTest</td> 
+  <td>main@2025221430</td>   <td></td> </tr>
 </table>
